adding the config files for blobber to start running

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 **/client
 !**/client/main.go
 
-**/blobber/blobber
-!**/blobber/blobber/main.go
-
+**/blobber/blobber/blobber
+**/blobber/blobber/logs
 **/pkg/
