Changes to create Folder per allocation ID in Docker.

--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -1,13 +1,8 @@
 FROM iron/go:dev
 
-WORKDIR /blobber
-
 ENV SRC_DIR=/blobber
-
-ADD . $SRC_DIR/
-
-ENV GOPATH=/blobber/code/go
-
+ENV GOPATH=$SRC_DIR/go
+WORKDIR $SRC_DIR
 
 #Download the dependencies
 RUN go get github.com/spf13/viper
@@ -16,6 +11,7 @@ RUN go get go.uber.org/zap
 RUN go get gopkg.in/natefinch/lumberjack.v2
 RUN go get github.com/gorilla/mux
 
-RUN cd code/go
-RUN go build 0chain.net/blobber/blobber
+#Add the source code
+ADD ./code/go/src $SRC_DIR/go/src
 
+RUN go build 0chain.net/blobber/blobber
