Docker changes for 3 Blobbers

--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -10,6 +10,7 @@ RUN go get -u golang.org/x/crypto/...
 RUN go get go.uber.org/zap
 RUN go get gopkg.in/natefinch/lumberjack.v2
 RUN go get github.com/gorilla/mux
+RUN go get github.com/jszwec/csvutil
 
 #Add the source code
 ADD ./code/go/src $SRC_DIR/go/src
