--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -10,12 +10,12 @@ services:
     volumes:
      - ./config:/blobber/config
     ports:
-     - "5050:5050"
+     - "505${BLOBBER}:505${BLOBBER}"
     networks:
       default:
       testnetblobber0:
-        ipv4_address: 198.18.0.91
-    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode1_keys.txt --nodes_file config/single_machine_3_nodes.txt
+        ipv4_address: 198.18.0.9${BLOBBER}
+    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file config/single_machine_3_nodes.txt
   
 
 networks:
