--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -11,6 +11,7 @@ RUN go get go.uber.org/zap
 RUN go get gopkg.in/natefinch/lumberjack.v2
 RUN go get github.com/gorilla/mux
 RUN go get github.com/jszwec/csvutil
+RUN go get github.com/dgraph-io/badger
 
 #Add the source code
 ADD ./code/go/src $SRC_DIR/go/src
