--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
      - ./config:/blobber/config
      - ./blobber${BLOBBER}/files:/blobber/files
+     - ./blobber${BLOBBER}/data:/blobber/data
     ports:
      - "505${BLOBBER}:505${BLOBBER}"
     #command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file config/single_machine_3_nodes.txt
