adding the handler package in docker

--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -12,6 +12,7 @@ RUN go get gopkg.in/natefinch/lumberjack.v2
 RUN go get github.com/gorilla/mux
 RUN go get github.com/jszwec/csvutil
 RUN go get github.com/dgraph-io/badger
+RUN go get github.com/gorilla/handlers
 
 #Add the source code
 ADD ./code/go/src $SRC_DIR/go/src
