--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 **/client
 !**/client/main.go
-
+**/docker.local/blobber*
 **/blobber/blobber/blobber
 **/blobber/blobber/logs
 **/blobber/blobber/files
