--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -17,8 +17,7 @@ services:
       default:
       testnet0:
         ipv4_address: 198.18.0.9${BLOBBER}
-    #command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file config/single_machine_3_nodes.txt
-    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes
+    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --files_dir /blobber/files --badger_dir /blobber/data
 
 
 networks:
