Fix for restart logic

--- a/docker.aws/build.blobber/docker-compose.yml
+++ b/docker.aws/build.blobber/docker-compose.yml
@@ -35,11 +35,7 @@ services:
     networks:
       default:
 
-    restart_policy:
-      condition: on-failure
-      delay: 20s
-      max_attempts: ${MAX_RETRY_ATTEMPTS}
-      window: 120s
+    restart: on-failure:${MAX_RETRY_ATTEMPTS}
 
 networks:
   default:
