Synching code with the new restart policy

--- a/docker.aws/build.blobber/docker-compose.yml
+++ b/docker.aws/build.blobber/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       default:
 
-    restart: on-failure:${MAX_RETRY_ATTEMPTS}
+    restart: ${RESTART_POLICY}
 
 networks:
   default:
