Docker executable size reduction

--- a/docker.aws/build.blobber/Dockerfile
+++ b/docker.aws/build.blobber/Dockerfile
@@ -1,13 +1,13 @@
-#Store all files and run environment under 0chain userid.
-FROM ubuntu:16.04
-RUN groupadd -r 0chain && useradd --no-log-init -r -g 0chain 0chain
+#FROM ubuntu:16.04
+#RUN groupadd -r 0chain && useradd --no-log-init -r -g 0chain 0chain
 
-FROM iron/go:dev
+FROM golang:1.11.4-alpine3.8 as blobber_build
 
 ENV SRC_DIR=/0chain
 ENV GOPATH=$GOPATH:$SRC_DIR/go
 WORKDIR $SRC_DIR
-ADD ./docker.aws/build.blobber/BLOBBER_VERSION .
+
+RUN apk add --update --no-cache build-base linux-headers git cmake bash perl grep
 
 #Download the dependencies
 RUN go get github.com/spf13/viper
@@ -15,7 +15,6 @@ RUN go get -u golang.org/x/crypto/...
 RUN go get go.uber.org/zap
 RUN go get gopkg.in/natefinch/lumberjack.v2
 RUN go get github.com/gorilla/mux
-RUN go get github.com/jszwec/csvutil
 RUN go get github.com/dgraph-io/badger
 RUN go get github.com/gorilla/handlers
 
@@ -23,9 +22,12 @@ RUN go get github.com/gorilla/handlers
 ADD ./code/go/src $SRC_DIR/go/src
 
 RUN go build 0chain.net/blobber/blobber
-WORKDIR $SRC_DIR/bin
-RUN cp $SRC_DIR/blobber $SRC_DIR/bin
 
-#Run the blobber
-WORKDIR $SRC_DIR
-USER 2000:2000
+FROM alpine:3.8
+ENV APP_DIR=/0chain
+WORKDIR $APP_DIR
+COPY --from=blobber_build $APP_DIR/bin/blobber $APP_DIR/bin/blobber
+
+#Store all files and run environment under 0chain userid.
+RUN addgroup -g 2000 -S 0chain && adduser -u 2000 -S 0chain -G 0chain
+USER 0chain:0chain
