--- a/docker.aws/build.blobber/.env
+++ b/docker.aws/build.blobber/.env
@@ -1,7 +1,8 @@
-COMPOSE_PROJECT_NAME=0chain
+COMPOSE_PROJECT_NAME=0chain_blobber
 IMAGE_NAME=0chain/blobber
 IMAGE_TAG=latest
 DOCKER_CODEBASE=/0chain
 ZCHAIN_USER=2000
 ZCHAIN_GROUP=2000
 MAX_RETRY_ATTEMPTS=3
+RESTART_POLICY="no"
