adding the html template for stats

--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: ./docker.local/Dockerfile
     volumes:
      - ./config:/blobber/config
+     - ./templates:/blobber/templates
      - ./blobber${BLOBBER}/files:/blobber/files
      - ./blobber${BLOBBER}/data:/blobber/data
     ports:
