--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       context: ../
       dockerfile: ./docker.local/Dockerfile
     volumes:
-     - ./config:/blobber/config
-     - ./templates:/blobber/templates
+     - ./keys_config:/blobber/keysconfig
+     - ../config:/blobber/config
+     - ../templates:/blobber/templates
      - ./blobber${BLOBBER}/files:/blobber/files
      - ./blobber${BLOBBER}/data:/blobber/data
     ports:
@@ -18,7 +19,7 @@ services:
       default:
       testnet0:
         ipv4_address: 198.18.0.9${BLOBBER}
-    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file config/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --files_dir /blobber/files --badger_dir /blobber/data
+    command: ./blobber --deployment_mode 0 --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --files_dir /blobber/files --badger_dir /blobber/data
 
 
 networks:
