Update build tag

--- a/docker.aws/build.blobber/Dockerfile
+++ b/docker.aws/build.blobber/Dockerfile
@@ -1,6 +1,6 @@
 #FROM ubuntu:16.04
 #RUN groupadd -r 0chain && useradd --no-log-init -r -g 0chain 0chain
-
+ARG image_tag
 FROM golang:1.11.4-alpine3.8 as blobber_build
 
 RUN apk add --update --no-cache build-base linux-headers git cmake bash perl grep
@@ -21,7 +21,8 @@ RUN go mod download
 #Add the source code
 ADD ./code/go/0chain.net $SRC_DIR/go/0chain.net
 
-RUN go build -v
+ARG image_tag
+RUN go build -v -ldflags "-X 0chain.net/core/build.BuildTag=${image_tag}"
 
 # Copy the build artifact into a minimal runtime image:
 FROM alpine:3.8
