Fix for blobber

--- a/docker.aws/build.blobber/docker-compose.yml
+++ b/docker.aws/build.blobber/docker-compose.yml
@@ -3,11 +3,12 @@ services:
   postgres:
     image: postgres:11
     volumes:
-      - /0chain/blobber/data/postgresql:/var/lib/postgresql/data
+      - /0chain/${AGENT_DIR}/data/postgresql:/var/lib/postgresql/data
     networks:
       default:
-    ports:
-      - 5432:5432
+
+    container_name: ${AGENT_CONTAINER}-postgres
+
   postgres-post:
     image: postgres:11
     environment:
@@ -15,17 +16,21 @@ services:
       POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
     volumes:
-      - /0chain/blobber/bin:/blobber/bin
-      - /0chain/blobber/sql:/blobber/sql
+      - /0chain/${AGENT_DIR}/bin:/blobber/bin
+      - /0chain/${AGENT_DIR}/sql:/blobber/sql
     command: bash /blobber/bin/postgres-entrypoint.sh
     links:
       - postgres:postgres
-  
+
+    container_name: ${AGENT_CONTAINER}-postgres-post
+
   blobber:
     build:
       context: ${DOCKER_CODEBASE}
       dockerfile: ./docker.aws/build.blobber/Dockerfile
 
+
+    container_name: ${AGENT_CONTAINER}
 
     environment:
     - DOCKER= true
@@ -34,13 +39,13 @@ services:
     links:
       - postgres-post:postgres-post
     volumes:
-    - /0chain/blobber/config:/0chain/config
-    - /0chain/blobber/files:/0chain/files
-    - /0chain/blobber/data:/0chain/data
-    - /0chain/blobber/log:/0chain/log
+    - /0chain/${AGENT_DIR}/config:/0chain/config
+    - /0chain/${AGENT_DIR}/files:/0chain/files
+    - /0chain/${AGENT_DIR}/data:/0chain/data
+    - /0chain/${AGENT_DIR}/log:/0chain/log
 
     ports:
-    - 5051:5051
+    - ${AGENT_PORT}:${AGENT_PORT}
 
     command: /0chain/bin/blobber --deployment_mode 0 --keys_file /0chain/config/blobber.txt --nodes_file nodes --files_dir /0chain/files --log_dir /0chain/log --db_dir /0chain/data
 
