--- a/docker.aws/build.blobber/Dockerfile
+++ b/docker.aws/build.blobber/Dockerfile
@@ -3,6 +3,19 @@ FROM golang:1.11.4-alpine3.8 as blobber_build
 
 RUN apk add --update --no-cache build-base linux-headers git cmake bash perl grep
 
+# Install Herumi's cryptography
+RUN apk add gmp gmp-dev openssl-dev && \
+    cd /tmp && \
+    wget -O - https://github.com/herumi/mcl/archive/master.tar.gz | tar xz && \
+    wget -O - https://github.com/herumi/bls/archive/master.tar.gz | tar xz && \
+    mv mcl* mcl && \
+    mv bls* bls && \
+    make -C mcl -j $(nproc) lib/libmclbn256.so install && \
+    cp mcl/lib/libmclbn256.so /usr/local/lib && \
+    make -C bls -j $(nproc) install && \
+    rm -R /tmp/mcl && \
+    rm -R /tmp/bls
+
 ENV SRC_DIR=/0chain
 ENV GO111MODULE=on
 
