--- a/docker.aws/build.blobber/Dockerfile
+++ b/docker.aws/build.blobber/Dockerfile
@@ -35,11 +35,14 @@ ADD ./code/go/0chain.net $SRC_DIR/go/0chain.net
 ARG image_tag
 ARG go_build_mode
 ARG go_bls_tag
-RUN go build -tags ${go_build_mode} -tags ${go_bls_tag}
-RUN go build -v -tags ${go_bls_tag} -ldflags "-X 0chain.net/core/build.BuildTag=${image_tag}"
+RUN go build -v -tags ${go_build_mode} -tags ${go_bls_tag} -ldflags "-X 0chain.net/core/build.BuildTag=${image_tag}"
 
 # Copy the build artifact into a minimal runtime image:
-FROM alpine:3.8
+FROM golang:1.11.4-alpine3.8
+RUN apk add gmp gmp-dev openssl-dev
+COPY --from=blobber_build  /usr/local/lib/libmcl*.so \
+                        /usr/local/lib/libbls*.so \
+                        /usr/local/lib/
 ENV APP_DIR=/0chain
 WORKDIR $APP_DIR
 COPY --from=blobber_build $APP_DIR/go/0chain.net/blobber/blobber $APP_DIR/bin/blobber
