--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -40,6 +40,8 @@ services:
     command: ./bin/validator --port 506${BLOBBER} --hostname 198.18.0.6${BLOBBER} --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --nodes_file b0single_machine_3_nodes --log_dir /blobber/log
     networks:
       default:
+      testnet0:
+        ipv4_address: 198.18.0.6${BLOBBER}
 
   blobber:
     build: 
@@ -62,11 +64,15 @@ services:
     command: ./bin/blobber --port 505${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --nodes_file b0single_machine_3_nodes --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data
     networks:
       default:
+      testnet0:
+        ipv4_address: 198.18.0.9${BLOBBER}
 
 
 networks:
   default:
     driver: bridge
+  testnet0:
+    external: true
 
 volumes:
   data:
