--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -21,9 +21,7 @@ services:
     links:
       - postgres:postgres
   validator:
-    build: 
-      context: ../
-      dockerfile: ./docker.local/ValidatorDockerfile
+    image: validator
     environment:
       - DOCKER= true
     depends_on:
@@ -44,9 +42,7 @@ services:
         ipv4_address: 198.18.0.6${BLOBBER}
 
   blobber:
-    build: 
-      context: ../
-      dockerfile: ./docker.local/Dockerfile
+    image: blobber
     environment:
       - DOCKER= true
     depends_on:
