--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -51,8 +51,16 @@ db:
   port: 5432
 
 minio:
-  worker_frequency: 3600
+  worker_frequency: 10
+  num_workers: 5
   storage_service_url: play.min.io
   access_key_id: Q3AM3UQ867SPQQA43P2F
   secret_access_key: zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
   use_ssl: true
+  bucket_name: mytestbucket
+  bucket_location: us-east-1
+
+cold_storage:
+  min_file_size: 1048576
+  file_time_limit_in_hours: 720
+  job_query_limit: 100
