--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -51,12 +51,13 @@ db:
   port: 5432
 
 minio:
+  start: false
   worker_frequency: 10
   num_workers: 5
   storage_service_url: play.min.io
   access_key_id: Q3AM3UQ867SPQQA43P2F
   secret_access_key: zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
-  use_ssl: true
+  use_ssl: false
   bucket_name: mytestbucket
   bucket_location: us-east-1
 
