--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   postgres:
     image: postgres:11
@@ -29,10 +29,10 @@ services:
     links:
       - postgres-post:postgres-post
     volumes:
-     - ../config:/blobber/config
-     - ./blobber${BLOBBER}/data:/blobber/data
-     - ./blobber${BLOBBER}/log:/blobber/log
-     - ./keys_config:/blobber/keysconfig
+      - ../config:/blobber/config
+      - ./blobber${BLOBBER}/data:/blobber/data
+      - ./blobber${BLOBBER}/log:/blobber/log
+      - ./keys_config:/blobber/keysconfig
     ports:
       - "506${BLOBBER}:506${BLOBBER}"
     command: ./bin/validator --port 506${BLOBBER} --hostname 198.18.0.6${BLOBBER} --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --log_dir /blobber/log
@@ -48,19 +48,18 @@ services:
     links:
       - validator:validator
     volumes:
-     - ../config:/blobber/config
-     - ./blobber${BLOBBER}/files:/blobber/files
-     - ./blobber${BLOBBER}/data:/blobber/data
-     - ./blobber${BLOBBER}/log:/blobber/log
-     - ./keys_config:/blobber/keysconfig
+      - ../config:/blobber/config
+      - ./blobber${BLOBBER}/files:/blobber/files
+      - ./blobber${BLOBBER}/data:/blobber/data
+      - ./blobber${BLOBBER}/log:/blobber/log
+      - ./keys_config:/blobber/keysconfig
     ports:
       - "505${BLOBBER}:505${BLOBBER}"
-    command: ./bin/blobber --port 505${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data
+    command: ./bin/blobber --port 505${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --nodes_file single_machine_3_nodes --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data --minio_file keys_config/minio_config.txt
     networks:
       default:
       testnet0:
         ipv4_address: 198.18.0.9${BLOBBER}
-
 
 networks:
   default:
