Update README minio config

--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -75,15 +75,25 @@ db:
   port: 5432
 
 minio:
+  # Enable or disable minio backup service
   start: false
-  worker_frequency: 3600 #in seconds
+  # The frequency at which the worker should look for files, Ex: 3600 means it will run every 3600 seconds
+  worker_frequency: 3600 # In Seconds
+  # Number of workers to run in parallel, Just to make execution faster we can have mutiple workers running simultaneously
   num_workers: 5
+  # Use SSL for connection or not
   use_ssl: false
 
 cold_storage:
+  # Minimum file size to be considered for moving to cloud
   min_file_size: 1048576 #in bytes
+  # Minimum time for which file is not updated or not used
   file_time_limit_in_hours: 720 #in hours
+  # Number of files to be queried and processed at once
   job_query_limit: 100
+  # Capacity in percentage after which the cloud backup should start work
   max_capacity_percentage: 50
+  # Delete local copy once the file is moved to cloud
   delete_local_copy: true
+  # Delete cloud copy if the file is deleted from the blobber by user/other process
   delete_cloud_copy: true
