--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -41,6 +41,8 @@ min_stake: 1.0
 max_stake: 100.0
 # maximum allowed number of stake holders
 num_delegates: 50
+# service charge of the blobber
+service_charge: 0.30
 
 block_worker: http://198.18.0.98:9091
 
