--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -20,9 +20,10 @@ ENV GO111MODULE=on
 
 # Download the dependencies:
 # Will be cached if we don't change mod/sum files
-COPY ./code/go/0chain.net/core/go.mod          ./code/go/0chain.net/core/go.sum          $SRC_DIR/go/0chain.net/core/
-COPY ./code/go/0chain.net/blobbercore/go.mod     ./code/go/0chain.net/blobbercore/go.sum     $SRC_DIR/go/0chain.net/blobbercore/
-COPY ./code/go/0chain.net/blobber/go.mod     ./code/go/0chain.net/blobber/go.sum     $SRC_DIR/go/0chain.net/blobber/
+COPY ./code/go/0chain.net/core/go.mod           ./code/go/0chain.net/core/go.sum           $SRC_DIR/go/0chain.net/core/
+COPY ./code/go/0chain.net/blobbercore/go.mod    ./code/go/0chain.net/blobbercore/go.sum    $SRC_DIR/go/0chain.net/blobbercore/
+COPY ./code/go/0chain.net/blobber/go.mod        ./code/go/0chain.net/blobber/go.sum        $SRC_DIR/go/0chain.net/blobber/
+COPY ./code/go/0chain.net/conductor/go.mod      ./code/go/0chain.net/conductor/go.sum      $SRC_DIR/go/0chain.net/conductor/
 
 WORKDIR $SRC_DIR/go/0chain.net/blobber
 RUN go mod download
