--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -12,16 +12,21 @@ logging:
 #  100 GB - 107374182400
 capacity: 1073741824 # 1 GB bytes total blobber capacity
 read_price: 0.01     # token / GB for reading
-write_price: 0.10    # token / GB for writing
+write_price: 0.10    # token / GB / time_unit for writing
+# the time_unit configured in Storage SC and can be given using
+#
+#     ./zbox sc-config
+#
+
 # min_lock_demand is value in [0; 1] range; it represents number of tokens the
 # blobber earned even if a user will not read or write something
 # to an allocation; the number of tokens will be calculated by the following
-# formula
+# formula (regarding the time_unit and allocation duration)
 #
 #     allocation_size * write_price * min_lock_demand
 #
 min_lock_demand: 0.1
-# max_offer_duration restrict long contacts where,
+# max_offer_duration restrict long contracts where,
 # in the future, prices can be changed
 max_offer_duration: 744h # 31 day
 challenge_completion_time: 2m # duration to complete a challenge
