--- a/https/conf.d/nginx.conf
+++ b/https/conf.d/nginx.conf
@@ -30,11 +30,11 @@ server {
 #     listen [::]:443 ssl http2;
 #     listen 443 ssl http2;
 
-#     server_name test4.devnet-0chain.net;
+#     server_name <your_domain>;
 
 #     # SSL code
-#     ssl_certificate /etc/nginx/ssl/live/test4.devnet-0chain.net/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/test4.devnet-0chain.net/privkey.pem;
+#     ssl_certificate /etc/nginx/ssl/live/<your_domain>/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/<your_domain>/privkey.pem;
 
 #     root /var/www/html;
 
