--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,7 @@ jobs:
         go-version: 1.14.x
     - uses: actions/checkout@v2
     - name: Test
-      run: |
-        for mod_file in $(find * -name go.mod); do
-            mod_dir=$(dirname $mod_file)
-            (cd $mod_dir; go test ./...)
-        done
+      run: bash ./test.sh
 
   dockerize_blobber:
     runs-on: ubuntu-20.04
