--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build unit test
-        run: ./docker.local/bin/build.unit_test.sh
+        run: ./docker.local/bin/build_unit_test.sh
 
       - name: run unit tests
         run: ./docker.local/bin/unit_test_check.sh
