--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,25 @@ jobs:
     - name: Test
       run: make test
 
+
+  generated-files-integrity:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14.x
+      - name: Install generate dependencies
+        run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
+          github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
+          google.golang.org/protobuf/cmd/protoc-gen-go \
+          google.golang.org/grpc/cmd/protoc-gen-go-grpc
+      - uses: actions/checkout@v2
+      - name: Generate files
+        run: cd code/go/0chain.net/blobbercore;./scripts/generate-grpc.sh;
+      - name: Fail if any file has changed
+        run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; exit 1; fi;
+
   lint:
     runs-on: ubuntu-20.04
     steps:
