--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           go-version: 1.14.x
       - name: Install generate dependencies
-        run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
+        run: GO111MODULE=on go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
           github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
           google.golang.org/protobuf/cmd/protoc-gen-go \
           google.golang.org/grpc/cmd/protoc-gen-go-grpc
