--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14.x
+      - uses: actions/checkout@v2
       - name: Install generate dependencies
-        run: GO111MODULE=on go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
+        run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
           github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
           google.golang.org/protobuf/cmd/protoc-gen-go \
           google.golang.org/grpc/cmd/protoc-gen-go-grpc
-      - uses: actions/checkout@v2
+      - name: Remove changes caused by installing dependencies
+        run: git reset --hard
       - name: Generate files
         run: cd code/go/0chain.net/blobbercore;./scripts/generate-grpc.sh;
       - name: Fail if any file has changed
