--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           go-version: 1.14.x
       - uses: actions/checkout@v2
+      - name: Goto blobbercore directory
+        run: cd code/go/0chain.net/blobbercore
       - name: Install generate dependencies
         run: go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
           github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
@@ -39,7 +41,7 @@ jobs:
       - name: Remove changes caused by installing dependencies
         run: git reset --hard
       - name: Generate files
-        run: cd code/go/0chain.net/blobbercore;./scripts/generate-grpc.sh;
+        run: ./scripts/generate-grpc.sh
       - name: Fail if any file has changed
         run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; exit 1; fi;
 
