--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,17 +31,15 @@ jobs:
         with:
           go-version: 1.14.x
       - uses: actions/checkout@v2
-      - name: Install generate dependencies
+      - name: Generate Files
         run: |
           cd code/go/0chain.net/blobbercore
           go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
           github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2 \
           google.golang.org/protobuf/cmd/protoc-gen-go \
           google.golang.org/grpc/cmd/protoc-gen-go-grpc
-      - name: Remove changes caused by installing dependencies
-        run: git reset --hard
-      - name: Generate files
-        run: ./scripts/generate-grpc.sh
+          git reset --hard
+          ./scripts/generate-grpc.sh
       - name: Fail if any file has changed
         run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; exit 1; fi;
 
