--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           go-version: 1.14.x
       - uses: actions/checkout@v2
-      - name: Generate Files
+      - name: Install dependencies
         run: |
           cd code/go/0chain.net/blobbercore
           go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway \
@@ -39,6 +39,10 @@ jobs:
           google.golang.org/protobuf/cmd/protoc-gen-go \
           google.golang.org/grpc/cmd/protoc-gen-go-grpc
           git reset --hard
+      - name: Generate Files
+        run: |
+          cd code/go/0chain.net/blobbercore
+          chmod +x ./scripts/generate-grpc.sh
           ./scripts/generate-grpc.sh
       - name: Fail if any file has changed
         run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; exit 1; fi;
