--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Generate Files
         run: |
           cd code/go/0chain.net/blobbercore
-          sudo ./scripts/generate-grpc.sh
+          ./scripts/generate-grpc.sh
       - name: Fail if any file has changed
         run: if output=$(git status --porcelain) && [ -z "$output" ]; then exit 0; else git status; exit 1; fi;
 
