--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
           docker network create --driver=bridge --subnet=198.18.0.0/15 --gateway=198.18.0.255 testnet0
           ./docker.local/bin/build.blobber.sh
           cd docker.local/blobber1; ../bin/blobber.start_bls.sh </dev/null &>/dev/null &
+          pwd
+          ls
           make integration-tests
 
   test:
