Revert "Merge branch '121-gomod-parent' into 68-http-handler-to-grpc"
This reverts commit e17d724e47835e4aa98f2e8b9cb7d8f3632fbee8, reversing
changes made to 8fe2a19760f4a9dc70c8c1024f0109577f90702f.

--- a/docker.local/Dockerfile
+++ b/docker.local/Dockerfile
@@ -24,13 +24,13 @@ ENV GO111MODULE=on
 
 # Download the dependencies:
 # Will be cached if we don't change mod/sum files
-COPY ./go.mod          ./go.sum          $SRC_DIR/
-RUN cd $SRC_DIR && go mod download
+COPY ./code/go/0chain.net/go.mod          ./code/go/0chain.net/go.sum          $SRC_DIR/go/0chain.net/
+RUN cd $SRC_DIR/go/0chain.net && go mod download
 
 #Add the source code
-ADD ./code/go/0chain.net $SRC_DIR/code/go/0chain.net
+ADD ./code/go/0chain.net $SRC_DIR/go/0chain.net
 
-WORKDIR $SRC_DIR/code/go/0chain.net/blobber
+WORKDIR $SRC_DIR/go/0chain.net/blobber
 
 ARG GIT_COMMIT
 ENV GIT_COMMIT=$GIT_COMMIT
@@ -44,4 +44,4 @@ COPY --from=blobber_build  /usr/local/lib/libmcl*.so \
                         /usr/local/lib/
 ENV APP_DIR=/blobber
 WORKDIR $APP_DIR
-COPY --from=blobber_build $APP_DIR/code/go/0chain.net/blobber/blobber $APP_DIR/bin/blobber
+COPY --from=blobber_build $APP_DIR/go/0chain.net/blobber/blobber $APP_DIR/bin/blobber
