add geeolocation properties

--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -87,6 +87,10 @@ db:
   host: postgres
   port: 5432
 
+geolocation:
+  latitude: 0
+  longitude: 0
+
 minio:
   # Enable or disable minio backup service
   start: false
