--- a/docker.local/docker-compose.yml
+++ b/docker.local/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       default:
     ports:
       - "543${BLOBBER}:5432"
+    labels:
+      zchain: "postgres"
   postgres-post:
     image: postgres:11
     environment:
@@ -17,6 +19,8 @@ services:
     volumes:
       - ../bin:/blobber/bin
       - ../sql:/blobber/sql
+    labels:
+      zchain: "postgres-post"
     command: bash /blobber/bin/postgres-entrypoint.sh
     links:
       - postgres:postgres
@@ -35,6 +39,8 @@ services:
       - ./keys_config:/blobber/keysconfig
     ports:
       - "506${BLOBBER}:506${BLOBBER}"
+    labels:
+      zchain: "validator"
     command: ./bin/validator --port 506${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --log_dir /blobber/log
     networks:
       default:
@@ -56,6 +62,8 @@ services:
     ports:
       - "505${BLOBBER}:505${BLOBBER}"
       - "703${BLOBBER}:703${BLOBBER}"
+    labels:
+      zchain: "blobber"
     command: ./bin/blobber --port 505${BLOBBER} --grpc_port 703${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/bnode${BLOBBER}_keys.txt --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data --minio_file keys_config/minio_config.txt
     networks:
       default:
