--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         docker build -t $BLOBBER_REGISTRY:$TAG -f "$DOCKERFILE_BLOB" .
         docker tag $BLOBBER_REGISTRY:$TAG $BLOBBER_REGISTRY:latest
-        ocker push $BLOBBER_REGISTRY:$TAG
+        docker push $BLOBBER_REGISTRY:$TAG
       env:
         TAG: ${{ steps.get_version.outputs.VERSION }}
         DOCKERFILE_BLOB: "docker.local/Dockerfile"
