--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -2,7 +2,7 @@ version: 1.0
 
 logging:
   level: "info"
-  console: false # printing log to console is only supported in development mode
+  console: true # printing log to console is only supported in development mode
 
 # for testing
 #  500 MB - 536870912
